--- a/styles/theme.css
+++ b/styles/theme.css
@@ -202,4 +202,16 @@
       rgba(19, 22, 28, 0.7) 100%
     );
   }
+
+  .bg-auth-light {
+    background-image: url("/assets/images/.bg-auth-light");
+    background-size: cover;
+    background-position: center;
+  }
+
+  .bg-auth-dark {
+    background-image: url("/assets/images/.bg-auth-dark");
+    background-size: cover;
+    background-position: center;
+  }
 }
